Resolves: tdf#106956 CDateFromIso accept also YYYY-MM-DD form

This is a combination of 2 commits.

Resolves: tdf#106956 CDateFromIso accept also YYYY-MM-DD form

Previous implementation was over-simplified and accepted all sort of malformed
input to yield some arbitrary date, including longer and shorter and not
strictly numeric strings.

Change-Id: I2158429aeff7431f5ec5a1c9125018a5455a4730
(cherry picked from commit cdcbdf88b7f74184b532925eaf140dbf65a2cd21)

Use invalid parameter error for malformed input, tdf#106956 follow-up

... instead of invalid procedure call.

Change-Id: I812f4c7041db9a116e65a24afb85164b4dd498b6
(cherry picked from commit d6fd4252bf248d2872c713a1d83817a2dc88a9d2)
Reviewed-on: https://gerrit.libreoffice.org/37074
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>